--- a/rfq/index.html
+++ b/rfq/index.html
@@ -8,8 +8,7 @@
 <style>
 :root{
   --brand:#6f57e9;--ink:#1f2432;--muted:#6d7486;--bg:#f6f7fb;--card:#fff;--line:#e9e9ef;
-  --green:#12a274;--amber:#b98500;--red:#c73737;
-  --shadow:0 12px 30px rgba(23,20,68,.08),0 1px 0 rgba(0,0,0,.04)
+  --green:#12a274;--shadow:0 12px 30px rgba(23,20,68,.08),0 1px 0 rgba(0,0,0,.04)
 }
 *{box-sizing:border-box}html,body{height:100%}
 body{margin:0;font:15px/1.56 ui-sans-serif,system-ui,-apple-system,Segoe UI,Inter,Roboto,Helvetica,Arial;color:var(--ink);background:var(--bg)}
@@ -20,7 +19,7 @@ h1{margin:0;font-size:26px;font-weight:800}
 .sub{color:var(--muted)}
 
 .toolbar{position:sticky;top:8px;z-index:3;background:var(--bg);
-  display:grid;grid-template-columns:1fr 180px 180px 160px auto auto;gap:12px;margin:18px 0}
+  display:grid;grid-template-columns:1fr 180px 180px 160px auto auto auto;gap:12px;margin:18px 0}
 .input,.select,.btn,textarea{height:40px;border:1px solid #d9daf0;border-radius:12px;background:#fff;padding:0 12px;font:inherit;outline:none;transition:.15s}
 .input,textarea{box-shadow:inset 0 0 0 1px rgba(0,0,0,0)}
 .input:focus,textarea:focus,.select:focus{border-color:#cfc9ff;box-shadow:0 0 0 3px #efeaff, inset 0 0 0 1px rgba(0,0,0,0)}
@@ -42,9 +41,6 @@ tbody td{border-bottom:1px solid var(--line);padding:12px;vertical-align:top}
 tbody tr:hover{background:#fcfbff}
 .mono{font-variant-numeric:tabular-nums}.muted{color:var(--muted)}.right{display:flex;gap:10px;justify-content:flex-end}
 .chip{display:inline-block;border-radius:999px;padding:3px 10px;border:1px solid #eee;background:#fafafa;font-size:12px;color:#5d6480}
-.pill{display:inline-flex;align-items:center;gap:6px;border:1px solid #e6f2ec;padding:3px 10px;border-radius:999px;background:#f0fbf7;color:var(--green);font-weight:800}
-.pill.warn{border-color:#fff3d6;background:#fffaf0;color:#8a6b00}
-.pill.danger{border-color:#fde1e1;background:#fff4f4;color:#a82323}
 .ie{display:inline-flex;align-items:center;gap:6px}
 .ie button{border:0;background:transparent;color:#6d6fe5;cursor:pointer;padding:0 6px;border-radius:6px}
 .ie button:hover{background:#f0efff}.ie select{display:none;height:30px;border-radius:10px}
@@ -88,8 +84,20 @@ const supabase=window.supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 <body>
 
 <script>
-/* dialog helpers */
-(function(){const ok=!!window.HTMLDialogElement&&!!HTMLDialogElement.prototype.showModal;window.showDlg=id=>{const el=document.getElementById(id);if(!el)return; if(ok){try{el.showModal();}catch{el.setAttribute('open','');el.style.display='block';}}else{el.setAttribute('open','');el.style.display='block';document.documentElement.style.overflow='hidden';}};window.closeDlg=id=>{const el=document.getElementById(id);if(!el)return; if(ok){try{el.close();}catch{el.removeAttribute('open');el.style.display='none');}}else{el.removeAttribute('open');el.style.display='none';document.documentElement.style.overflow='';}};})();
+/* dialog helpers (fixed) */
+(function(){
+  const ok=!!window.HTMLDialogElement&&!!HTMLDialogElement.prototype.showModal;
+  window.showDlg=id=>{
+    const el=document.getElementById(id); if(!el) return;
+    if(ok){ try{ el.showModal(); } catch{ el.setAttribute('open',''); el.style.display='block'; } }
+    else { el.setAttribute('open',''); el.style.display='block'; document.documentElement.style.overflow='hidden'; }
+  };
+  window.closeDlg=id=>{
+    const el=document.getElementById(id); if(!el) return;
+    if(ok){ try{ el.close(); } catch{ el.removeAttribute('open'); el.style.display='none'; } }
+    else { el.removeAttribute('open'); el.style.display='none'; document.documentElement.style.overflow=''; }
+  };
+})();
 </script>
 
 <div class="wrap">
@@ -113,14 +121,10 @@ const supabase=window.supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
   <div class="toolbar">
     <input id="q" class="input" placeholder="Search customer, part, vendor, note…"/>
     <select id="fltSales" class="select"><option value="">All salespeople</option></select>
-    <select id="fltStatus" class="select">
-      <option value="">All status</option><option>Open</option><option>Quoted</option><option>Abandoned</option>
-    </select>
-    <select id="fltGroup" class="select">
-      <option value="none">No grouping</option>
-      <option value="sales">Group by salesperson</option>
-    </select>
+    <select id="fltStatus" class="select"><option value="">All status</option><option>Open</option><option>Quoted</option><option>Abandoned</option></select>
+    <select id="fltGroup" class="select"><option value="none">No grouping</option><option value="sales">Group by salesperson</option></select>
     <button id="btnNew" class="btn" type="button">+ New RFQ</button>
+    <button id="btnLeads" class="btn ghost" type="button">Leaderboard</button>
     <button class="btn ghost" id="btnCsv">Export CSV</button>
   </div>
 
@@ -146,7 +150,12 @@ const supabase=window.supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
 <!-- Create/Edit RFQ -->
 <dialog id="dlg"><div class="modal">
-  <header><div class="head"><strong id="dlgTitle">New RFQ</strong><button class="btn ghost mini" type="button" onclick="closeDlg('dlg')">✕</button></div></header>
+  <header><div class="head"><strong id="dlgTitle">New RFQ</strong>
+    <div>
+      <button class="btn ghost mini" type="button" id="btnSalesMgr">Salespeople…</button>
+      <button class="btn ghost mini" type="button" onclick="closeDlg('dlg')">✕</button>
+    </div>
+  </div></header>
   <div class="content">
     <input type="hidden" id="rfqId"/>
     <div class="grid3">
@@ -203,13 +212,47 @@ const supabase=window.supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
   <div class="content"><div id="viewBody"></div></div>
 </div></dialog>
 
+<!-- Salespeople Manager -->
+<dialog id="salesDlg"><div class="modal">
+  <header><div class="head"><strong>Manage Salespeople</strong><button class="btn ghost mini" type="button" onclick="closeDlg('salesDlg')">✕</button></div></header>
+  <div class="content">
+    <div class="note">Add or remove sales team members. Changes update the filters and forms immediately.</div>
+    <div id="salesList" class="bordered" style="margin-bottom:10px"></div>
+    <div class="actions">
+      <input id="newSalesName" class="input mini" placeholder="e.g. Jane D"/>
+      <button id="btnSalesAdd" class="btn mini">Add</button>
+    </div>
+  </div>
+</div></dialog>
+
+<!-- Leaderboard -->
+<dialog id="boardDlg"><div class="modal">
+  <header><div class="head"><strong>RFQ Leaderboard</strong><button class="btn ghost mini" type="button" onclick="closeDlg('boardDlg')">✕</button></div></header>
+  <div class="content">
+    <div class="actions" style="gap:8px;margin-bottom:10px">
+      <div class="note">From</div><input type="date" id="lbFrom" class="input mini"/>
+      <div class="note">To</div><input type="date" id="lbTo" class="input mini"/>
+      <button class="btn mini" id="lbApply">Apply</button>
+      <button class="btn ghost mini" id="lbQuickWeek">This Week</button>
+      <button class="btn ghost mini" id="lbQuickMonth">This Month</button>
+      <button class="btn ghost mini" id="lbQuick3M">Last 3 Months</button>
+    </div>
+    <div class="hscroll">
+      <table class="tbl" style="min-width:760px">
+        <thead><tr><th>Salesperson</th><th>Total RFQs</th><th>Quoted</th><th>Pending</th><th>Needs Better</th><th>Avg Target</th></tr></thead>
+        <tbody id="lbBody"></tbody>
+      </table>
+    </div>
+  </div>
+</div></dialog>
+
 <div id="toast"></div>
 
 <script>
 /* utils */
 const $=id=>document.getElementById(id);
-const SALESTEAM=['Nick N','Dan C','Emir B','Nick K','Jake B','Howell S','Alan V']; // add/remove as needed
-const curSym=c=>({USD:'$',GBP:'£',EUR:'€'})[c||'USD']||'$';
+let SALESTEAM=[]; // loaded from Supabase (seeded with 4 names)
+const todayStr=()=>new Date().toISOString().slice(0,10);
 const fmt=n=>(n==null||isNaN(n))?'-':Number(n).toLocaleString(undefined,{minimumFractionDigits:2,maximumFractionDigits:4});
 const fmtInt=n=>(n==null||isNaN(n))?'-':Number(n).toLocaleString();
 const esc=s=>(s??'').toString().replace(/[&<>\"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
@@ -224,8 +267,7 @@ function inlineSelect(o,field,options){
   const sel=document.createElement('select');options.forEach(v=>{const op=document.createElement('option');op.value=v;op.textContent=v;sel.appendChild(op);});sel.value=o[field]||options[0];
   const start=()=>{w.classList.add('editing');sel.focus();};btn.onclick=start;chip.onclick=start;chip.style.cursor='pointer';
   sel.onchange=async()=>{try{await supa.rfqQuickUpdate(o.id,field,sel.value);chip.textContent=sel.value;setToast('Saved');}catch(e){setToast('Save failed',true);}finally{w.classList.remove('editing');}};
-  sel.onblur=()=>w.classList.remove('editing');
-  w.append(chip,btn,sel);return w;
+  sel.onblur=()=>w.classList.remove('editing'); w.append(chip,btn,sel); return w;
 }
 
 /* supabase data layer */
@@ -248,8 +290,6 @@ const supa={
     const vendors=header.vendors||[]; const {vendors:_,comments:__,...rfqData}=header;
     const {data:up,error:e0}=await supabase.from('rfqs').upsert(rfqData).select().single();
     if(e0)throw e0; const id=up.id;
-
-    // replace vendors
     await supabase.from('rfq_vendor_quotes').delete().eq('rfq_id',id);
     if(vendors.length){
       await supabase.from('rfq_vendor_quotes').insert(vendors.map(v=>({
@@ -264,15 +304,31 @@ const supa={
   async addNote(rfq_id,author,body){const {error}=await supabase.from('rfq_notes').insert({rfq_id,author,body});if(error)throw error;},
   async rfqQuickUpdate(id,field,value){const {error}=await supabase.from('rfqs').update({[field]:value}).eq('id',id);if(error)throw error;},
 
+  // salespeople
+  async loadSales(){
+    const {data,error}=await supabase.from('salespeople').select('*').order('name');
+    if(error){console.error(error); SALESTEAM=[]; return;}
+    if(!data || !data.length){
+      const seed=['Dan C','Jake B','Nick K','Emir B'].map(n=>({name:n}));
+      await supabase.from('salespeople').insert(seed);
+      SALESTEAM=seed.map(s=>s.name);
+    }else{
+      SALESTEAM=data.map(r=>r.name);
+    }
+  },
+  async addSales(name){await supabase.from('salespeople').insert({name});await this.loadSales();},
+  async delSales(name){await supabase.from('salespeople').delete().eq('name',name);await this.loadSales();},
+
   rt(){supabase.channel('rfq-rt')
     .on('postgres_changes',{event:'*',schema:'public',table:'rfqs'},async()=>{await supa.load();render();})
     .on('postgres_changes',{event:'*',schema:'public',table:'rfq_vendor_quotes'},async()=>{await supa.load();render();})
     .on('postgres_changes',{event:'*',schema:'public',table:'rfq_notes'},async()=>{await supa.load();renderOpenIfSame();})
+    .on('postgres_changes',{event:'*',schema:'public',table:'salespeople'},async()=>{await supa.loadSales();refreshSalesUI();})
     .subscribe();}
 };
 
 /* UI render */
-function bestVendor(vs){if(!vs||!vs.length)return ['-','-'];const s=vs.slice().sort((a,b)=>(a.unit_price||1e12)-(b.unit_price||1e12));const top=s.find(x=>x.available_qty>0)||s[0];return [top.vendor||'-',top.unit_price!=null?fmt(top.unit_price):'-'];}
+function bestVendor(vs){if(!vs||!vs.length)return ['-','-'];const s=vs.slice().sort((a,b)=>(a.unit_price??1e12)-(b.unit_price??1e12));const top=s.find(x=>(x.available_qty||0)>0)||s[0];return [top.vendor||'-',top.unit_price!=null?fmt(top.unit_price):'-'];}
 
 function computeStats(rows){
   const total=rows.length;
@@ -311,14 +367,14 @@ function render(){
         <th>Status</th><th>Quoted</th><th>Need Better</th><th>Best Vendor</th><th>Best Price</th><th>Age</th><th>Notes</th><th>Actions</th></tr>
       </thead><tbody></tbody></table>`;
       card.appendChild(tw);group.appendChild(card);wrap.appendChild(group);
-      fillBody(tw.querySelector('tbody'),by[name]);
+      fillBody(tw.querySelector('tbody'),by[name],false);
     });
   } else {
-    fillBody($('tbody'),rows);
+    fillBody($('tbody'),rows,true);
   }
 }
 
-function fillBody(tb,rows){
+function fillBody(tb,rows,withSales){
   tb.innerHTML='';
   if(!rows.length){tb.innerHTML='<tr><td colspan="13" class="muted" style="text-align:center;padding:40px">No RFQs</td></tr>';return;}
   rows.forEach(r=>{
@@ -329,7 +385,8 @@ function fillBody(tb,rows){
                    <button class="btn mini ghost" onclick="delById('${r.id}')">Delete</button>`;
     const tdv=document.createElement('td');const vb=document.createElement('button');vb.className='btn smini';vb.textContent='View';vb.onclick=()=>openViewById(r.id);tdv.appendChild(vb);
     tr.appendChild(tdv);
-    [esc(r.customer||'-'),esc(r.part_number||'-'),fmtInt(r.quantity||0),fmt(r.target_price),esc(r.salesperson||'-')].forEach(html=>{const td=document.createElement('td');td.innerHTML=html;tr.appendChild(td);});
+    [esc(r.customer||'-'),esc(r.part_number||'-'),fmtInt(r.quantity||0),fmt(r.target_price)].forEach(html=>{const td=document.createElement('td');td.innerHTML=html;tr.appendChild(td);});
+    if(withSales){const td=document.createElement('td');td.textContent=r.salesperson||'-';tr.appendChild(td);}
     let td=document.createElement('td');td.appendChild(inlineSelect(r,'status',['Open','Quoted','Abandoned']));tr.appendChild(td);
     td=document.createElement('td');td.appendChild(mk('quoted_to_customer'));tr.appendChild(td);
     td=document.createElement('td');td.appendChild(mk('needs_better_price'));tr.appendChild(td);
@@ -396,9 +453,10 @@ function openModalById(id){openModal(supa.state.rfqs.find(x=>x.id===id));}
 function openModal(r){
   $('dlgTitle').textContent=r?'Edit RFQ':'New RFQ';
   $('rfqId').value=r?.id||'';
-  $('salesperson').innerHTML=SALESTEAM.map(n=>`<option ${r?.salesperson===n?'selected':''}>${n}</option>`).join('');
-  $('editNoteAuthor').innerHTML=SALESTEAM.map(n=>`<option>${n}</option>`).join('');
+  refreshSalesUI(); // fills selects from SALESTEAM
   ['customer','part_number','quantity','target_price','status','notes','priority'].forEach(id=>{$(id).value=r?.[id]??'';});
+  $('salesperson').value=r?.salesperson||SALESTEAM[0]||'';
+  $('editNoteAuthor').value=SALESTEAM[0]||'';
   $('quoted_to_customer').value=String(!!r?.quoted_to_customer);
   $('needs_better_price').value=String(!!r?.needs_better_price);
 
@@ -424,6 +482,7 @@ function openModal(r){
     try{await supa.save(header);closeDlg('dlg');await supa.load();render();setToast('Saved');}catch(e){console.error(e);alert('Save failed: '+(e.message||e));}
   };
   $('btnDelete').onclick=async()=>{if(!r?.id){closeDlg('dlg');return;}if(!confirm('Delete this RFQ?'))return;await supa.del(r.id);await supa.load();render();closeDlg('dlg');};
+  $('btnSalesMgr').onclick=()=>{renderSalesMgr();showDlg('salesDlg');};
   showDlg('dlg');
 }
 
@@ -494,15 +553,86 @@ function openView(r,keep=false){
 /* notes */
 async function addNote(rfq_id){const author=$('noteAuthor').value;const body=$('noteBody').value.trim();if(!body)return;await supa.addNote(rfq_id,author,body);$('noteBody').value='';await supa.load();renderOpenIfSame();}
 
+/* salespeople manager */
+function refreshSalesUI(){
+  // Populate selects
+  $('salesperson').innerHTML=SALESTEAM.map(n=>`<option>${n}</option>`).join('');
+  $('editNoteAuthor').innerHTML=SALESTEAM.map(n=>`<option>${n}</option>`).join('');
+  $('fltSales').innerHTML=['',...SALESTEAM].map(n=>n?`<option>${n}</option>`:'<option value="">All salespeople</option>').join('');
+}
+function renderSalesMgr(){
+  const c=$('salesList');
+  c.innerHTML=SALESTEAM.map(n=>`<div class="note-item" style="display:flex;justify-content:space-between;align-items:center">
+    <div><b>${esc(n)}</b></div>
+    <button class="btn mini ghost" onclick="removeSales('${n.replace(/'/g,'&#39;')}')">Remove</button>
+  </div>`).join('') || '<div class="muted">No salespeople yet</div>';
+}
+async function removeSales(name){if(!confirm('Remove '+name+'?'))return;await supa.delSales(name);renderSalesMgr();refreshSalesUI();setToast('Removed');}
+$('btnSalesAdd')?.addEventListener('click', async ()=>{
+  const name=$('newSalesName').value.trim(); if(!name) return;
+  await supa.addSales(name); $('newSalesName').value=''; renderSalesMgr(); refreshSalesUI(); setToast('Added');
+});
+
+/* leaderboard */
+function openLeaderboard(){
+  const d=new Date(), y=d.getFullYear(), m=d.getMonth();
+  $('lbFrom').value=new Date(y,m,1).toISOString().slice(0,10);
+  $('lbTo').value=new Date(y,m+1,0).toISOString().slice(0,10);
+  applyLeaderboard(); showDlg('boardDlg');
+}
+function filterByDate(list,from,to){
+  const f=from?new Date(from+'T00:00:00Z'):null, t=to?new Date(to+'T23:59:59Z'):null;
+  return list.filter(r=>{
+    const dt=new Date(r.created_at);
+    return (!f||dt>=f)&&(!t||dt<=t);
+  });
+}
+function applyLeaderboard(){
+  const from=$('lbFrom').value, to=$('lbTo').value;
+  const rows=filterByDate(supa.state.rfqs,from,to);
+  const by={}; rows.forEach(r=>{(by[r.salesperson||'Unknown'] ||= []).push(r);});
+  const body=$('lbBody'); body.innerHTML='';
+  Object.keys(by).sort().forEach(name=>{
+    const list=by[name];
+    const st=computeStats(list);
+    const avg=list.length? (list.reduce((s,r)=>s+(+r.target_price||0),0)/list.length) : 0;
+    const tr=document.createElement('tr');
+    tr.innerHTML=`<td>${esc(name)}</td>
+      <td class="mono">${fmtInt(st.total)}</td>
+      <td class="mono">${fmtInt(st.quoted)}</td>
+      <td class="mono">${fmtInt(st.pending)}</td>
+      <td class="mono">${fmtInt(st.need)}</td>
+      <td class="mono">${fmt(avg)}</td>`;
+    body.appendChild(tr);
+  });
+  if(!body.children.length) body.innerHTML='<tr><td colspan="6" class="muted">No RFQs in this range</td></tr>';
+}
+$('lbApply')?.addEventListener('click',applyLeaderboard);
+$('lbQuickWeek')?.addEventListener('click',()=>{
+  const d=new Date(); const day=d.getDay()||7; const from=new Date(d); from.setDate(d.getDate()-day+1);
+  $('lbFrom').value=from.toISOString().slice(0,10); $('lbTo').value=todayStr(); applyLeaderboard();
+});
+$('lbQuickMonth')?.addEventListener('click',()=>{
+  const d=new Date(), y=d.getFullYear(), m=d.getMonth();
+  $('lbFrom').value=new Date(y,m,1).toISOString().slice(0,10); $('lbTo').value=new Date(y,m+1,0).toISOString().slice(0,10); applyLeaderboard();
+});
+$('lbQuick3M')?.addEventListener('click',()=>{
+  const d=new Date(); const from=new Date(d); from.setMonth(d.getMonth()-3); $('lbFrom').value=from.toISOString().slice(0,10); $('lbTo').value=todayStr(); applyLeaderboard();
+});
+
 /* init + events */
-$('fltSales').innerHTML=['',...SALESTEAM].map(n=>n?`<option>${n}</option>`:'<option value="">All salespeople</option>').join('');
 $('btnNew').onclick=()=>openModal();
+$('btnLeads').onclick=()=>openLeaderboard();
 $('q').addEventListener('input',render);
 $('fltSales').onchange=render; $('fltStatus').onchange=render; $('fltGroup').onchange=render;
 $('btnCsv').onclick=()=>exportCSV(supa.state.rfqs);
 window.addEventListener('keydown',e=>{if((e.ctrlKey||e.metaKey)&&e.key.toLowerCase()==='f'){e.preventDefault();$('q').focus();}});
 
-(async function start(){await supa.load();supa.rt();render();})();
+(async function start(){
+  await supa.loadSales();            // fills SALESTEAM (seeds 4 names if empty)
+  refreshSalesUI();
+  await supa.load(); supa.rt(); render();
+})();
 </script>
 </body>
 </html>
